# mcp-memory

./: .dockerignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
memory/: __init__.py  database.py  main.py  memory.py
memory/mem/: database.py
