[project]
name = "mcp-memory"
version = "0.1.0"
description = "MCP Memory based on ChromaDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mcp[cli]>=1.7.1"]

[project.scripts]
mcp-memory = "memory.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory"]

[tool.pyright]
venvPath = "."
venv = ".venv"
