[project]
name = "mcp-memory"
description = "MCP Memory based on ChromaDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["chromadb>=1.0.8", "mcp[cli]>=1.7.1"]
dynamic = ["version"]

[project.scripts]
mcp-memory = "memory.main:main"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory"]

[tool.hatch.version]
path = "memory/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/memory", "README.md"]
exclude = ["**/__pycache__", "**/*.pyc", "**/*.pyo", "**/*.pyd"]

[tool.hatch.envs.default]
installer = "uv"
